--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="block">
-                    <p class="riskManagerTitle">Безопастность</p>
+                    <p class="riskManagerTitle">Безопасность</p>
                     <div class="buttonWrapper">
                         <button class="button" id="securRef">Обновить политику</button>
                         <button class="button" id="securAtt">Кибератака</button>
